src/components/HoverMenu/hoverMenu.scss
.Layer__hover-menu {
  position: relative;
  display: flex;
  width: 100%;

  &.Layer__hover-menu--open {
    .Layer__hover-menu__list-wrapper {
      top: 100%;
      right: 0;
      opacity: 1;
      touch-action: auto;
      pointer-events: auto;
    }
  }

  .Layer__hover-menu__children {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    padding: 0;
    border: none;
    background: none;
    cursor: pointer;
    color: inherit;

    &:focus-visible {
      outline: 1px auto -webkit-focus-ring-color;
      outline-offset: 2px;
    }
  }

  .Layer__hover-menu__list-wrapper {
    position: absolute;
    z-index: 99;
    top: 80%;
    right: -8px;
    display: flex;
    justify-content: stretch;
    min-width: 160px;
    padding-top: var(--spacing-xs);
    touch-action: none;
    pointer-events: none;
    opacity: 0;
    transition: all 0.15s ease-out;

    .Layer__hover-menu__list {
      box-sizing: border-box;
      display: flex;
      flex: 1;
      flex-direction: column;
      gap: var(--spacing-3xs);
      padding: var(--spacing-3xs);
      border-radius: var(--spacing-xs);
      box-shadow:
        0 0 0 1px rgb(25 25 25 / 6%),
        0 4px 12px 0 var(--base-transparent-1, rgb(16 24 40 / 1%)),
        0 2px 4px 0 rgb(25 25 25 / 6%);
      margin: 0;
      background: var(--color-base-0);
      list-style: none;

      .Layer__hover-menu__list-item {
        display: flex;
        align-items: center;
        padding: var(--spacing-3xs);
        padding-left: var(--spacing-xs);
        border-radius: var(--spacing-2xs);
        color: var(--color-base-500);
        transition: all 0.2s ease-in-out;

        .Layer__hover-menu__list-item-button {
          width: 100%;
          border: none;
          outline: none;
          background: none;
          cursor: pointer;
          font-size: var(--text-sm);
          line-height: normal;
          font-family: inherit;
          font-weight: 500;
          text-align: start;
          color: inherit;
          font-feature-settings: inherit;
          letter-spacing: -0.06px;
        }

        &:hover {
          background: var(--color-base-50);
          font-weight: 540;
          color: var(--color-base-800);
        }
      }
    }
  }
}

